# OpenCV-course

./: .gitignore  CMakeLists.txt  README.md
1_capture/: CMakeLists.txt  main.cpp
2_color_correction/: CMakeLists.txt  main.cpp
2_color_corretion/: main.cpp
3_filters/: CMakeLists.txt  main.cpp
4_contours/: CMakeLists.txt  main.cpp
